--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <table cellspacing="20">
     <tr>
       <td><img src="images/html5 logo.png" alt="Image of html5"></td>
-      <td><h1>Akona Calana</h1>
+      <td><h1>Senpai Q</h1>
       <p><em>A 16 year old male on <strong><a href="https://earth.google.com/web">planet Earth</a></strong></em></p>
-      <p>I live in South Africa, love(but learning) to code. I meditate, read books, manage my social media and, in the foreseeable future, plan on starting a marketing agency.</p></td>
+      <p>I live in Senpai Land, love(but learning) to code. I meditate, read books, manage my social media and, in the foreseeable future, plan on starting a marketing agency.</p></td>
     </tr>
   </table>
 
